Use Java 7 compatible method for reading/writing files